--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "CSE341 project 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "nodemon": "nodemon app.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -13,10 +17,13 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "prettier": "3.2.4"
+    "nodemon": "^3.0.3",
+    "prettier": "3.2.4",
+    "swagger-autogen": "^2.23.7"
   }
 }
