--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "swagger-ui-express": "^5.0.0",
     "validatorjs": "^3.22.1"
   },
